--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "gh-pages": "^2.0.1"
   }
 }
